--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -46,6 +46,15 @@
     <Reference Include="BigRationalLibrary">
       <HintPath>..\Universal\packages\BigRationalLibrary.1.0.0.0\lib\NETFramework40\BigRationalLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Core">
+      <HintPath>..\Universal\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeFluent.Runtime.Client">
+      <HintPath>..\Universal\packages\CodeFluentRuntimeClient.1.0.0.772\lib\CodeFluent.Runtime.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="CsQuery">
+      <HintPath>..\Universal\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
+    </Reference>
     <Reference Include="FluentAssertions">
       <HintPath>..\Universal\packages\FluentAssertions.3.1.229\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
@@ -66,6 +75,15 @@
     </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\Universal\packages\NHibernate.3.3.1.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\Universal\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Conventions">
+      <HintPath>..\Universal\packages\Ninject.Extensions.Conventions.3.2.0.0\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Factory">
+      <HintPath>..\Universal\packages\Ninject.Extensions.Factory.3.2.1.0\lib\net45-full\Ninject.Extensions.Factory.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\Universal\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
@@ -499,6 +517,9 @@
     <Compile Include="Threading\WaitNode.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="External\Readme.txt" />
+    <Content Include="External\x64\CodeFluent.Runtime.Compression.dll" />
+    <Content Include="External\x86\CodeFluent.Runtime.Compression.dll" />
     <Content Include="Misc\asingle.js" />
     <Content Include="Misc\brain.js" />
     <Content Include="Misc\JavaScript1.js" />
