--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,9 @@
   <package id="BigDecimal" version="1.0.0" targetFramework="net451" />
   <package id="BigMath" version="0.4.2" targetFramework="net451" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
   <package id="fluent-email" version="1.3.0" targetFramework="net451" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
@@ -11,6 +14,9 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.20" targetFramework="net451" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net451" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
   <package id="NLog" version="3.1.0.0" targetFramework="net451" />
   <package id="NLog.Fluent" version="3.1.0.30" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
