--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Collections\AbstractQueue.cs" />
     <Compile Include="Collections\BlockingQueue.cs" />
     <Compile Include="Collections\ImmutableList.cs" />
+    <Compile Include="Collections\ShufflingType.cs" />
     <Compile Include="Collections\TreeTraversalType.cs" />
     <Compile Include="Collections\CollectionDebugView.cs" />
     <Compile Include="Collections\ConcurrentCollection.cs" />
@@ -316,11 +317,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Maths\BigIntegerRange.cs" />
-    <Compile Include="Maths\Class1.cs" />
+    <Compile Include="Maths\RomanNumber.cs" />
     <Compile Include="Maths\MovingAverageCalculator.cs" />
     <Compile Include="Maths\DoubleConverter.cs" />
     <Compile Include="Maths\Number.cs" />
     <Compile Include="Maths\NumberExtensions.cs" />
+    <Compile Include="Maths\RomanConverter.cs" />
     <Compile Include="Maths\Votally.cs" />
     <Compile Include="Maths\VotallyD.cs" />
     <Compile Include="Measurement\Currency\AltCoinExtensions.cs" />
