--- a/packages.config
+++ b/packages.config
@@ -1,23 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Adform.TplDataflow.Extensions" version="0.2.10" targetFramework="net451" />
-  <package id="BigMath" version="0.4.2" targetFramework="net451" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
   <package id="chi" version="0.1.1" targetFramework="net451" />
-  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
-  <package id="fluent-email" version="1.3.0" targetFramework="net451" />
-  <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.20" targetFramework="net451" />
-  <package id="NHibernate" version="3.3.1.4000" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
-  <package id="RazorEngine" version="3.2.0" targetFramework="net451" />
-  <package id="TransientFaultHandling.Core" version="5.1.1209.0" targetFramework="net451" />
 </packages>
