--- a/packages.config
+++ b/packages.config
@@ -15,4 +15,5 @@
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
+  <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
