--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
-  <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.0" targetFramework="net451" />
   <package id="chi" version="0.1.1" targetFramework="net451" />
   <package id="Clojure" version="1.5.0.2" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
@@ -11,9 +11,11 @@
   <package id="Microsoft.Tpl.Dataflow" version="4.5.20" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
