--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -109,6 +109,9 @@
     <Reference Include="Ninject.Extensions.NamedScope">
       <HintPath>..\Universal\packages\Ninject.Extensions.NamedScope.3.2.0.0\lib\net45-full\Ninject.Extensions.NamedScope.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\RemoveEmptyFolders\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\AIBrain\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
@@ -568,6 +571,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="README.textile" />
   </ItemGroup>
