--- a/packages.config
+++ b/packages.config
@@ -17,6 +17,9 @@
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net451" />
   <package id="NinjectAutoRegister" version="1.0.0" targetFramework="net451" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net451" />
+  <package id="NLog.Config" version="3.1.0.0" targetFramework="net451" />
+  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
