--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -110,7 +110,10 @@
       <HintPath>..\Universal\packages\Ninject.Extensions.NamedScope.3.2.0.0\lib\net45-full\Ninject.Extensions.NamedScope.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
-      <HintPath>..\RemoveEmptyFolders\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
+      <HintPath>packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog.Fluent">
+      <HintPath>packages\NLog.Fluent.3.1.0.30\lib\net45\NLog.Fluent.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
