--- a/packages.config
+++ b/packages.config
@@ -19,6 +19,7 @@
   <package id="NinjectAutoRegister" version="1.0.0" targetFramework="net451" />
   <package id="NLog" version="3.1.0.0" targetFramework="net451" />
   <package id="NLog.Config" version="3.1.0.0" targetFramework="net451" />
+  <package id="NLog.Fluent" version="3.1.0.30" targetFramework="net451" />
   <package id="NLog.Schema" version="3.1.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
