--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -109,12 +109,6 @@
     <Reference Include="Ninject.Extensions.NamedScope">
       <HintPath>..\Universal\packages\Ninject.Extensions.NamedScope.3.2.0.0\lib\net45-full\Ninject.Extensions.NamedScope.dll</HintPath>
     </Reference>
-    <Reference Include="NLog">
-      <HintPath>packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog.Fluent">
-      <HintPath>packages\NLog.Fluent.3.1.0.30\lib\net45\NLog.Fluent.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\AIBrain\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
@@ -494,6 +488,7 @@
     <Compile Include="Persistence\Persist.cs" />
     <Compile Include="Persistence\Persistable.cs" />
     <Compile Include="Persistence\ReadProgressStream.cs" />
+    <Compile Include="Security\Windows.cs" />
     <Compile Include="Speech\Speecher.cs" />
     <Compile Include="Speech\SpeechOutput.cs" />
     <Compile Include="Speech\SpeechToText.cs" />
@@ -577,9 +572,6 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
     <None Include="README.textile" />
   </ItemGroup>
