--- a/packages.config
+++ b/packages.config
@@ -19,5 +19,7 @@
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net451" />
   <package id="NinjectAutoRegister" version="1.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
+  <package id="PostSharp" version="3.1.49" targetFramework="net451" />
+  <package id="System.Data.SqlLocalDb" version="1.10.0.0" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
