--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -155,6 +155,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\Lists\IPossibleThrowable.cs" />
+    <Compile Include="Collections\Lists\ThrowSetting.cs" />
     <Compile Include="Collections\Sets\ConcurrentHashset.cs" />
     <Compile Include="Collections\ExperimentalAttribute.cs" />
     <Compile Include="Collections\Positionial.cs" />
@@ -874,7 +876,7 @@
       <Version>12.1.2</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>6.0.0</Version>
+      <Version>6.0.2</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -932,12 +934,6 @@
     <PackageReference Include="Unicode.net">
       <Version>0.1.2</Version>
     </PackageReference>
-    <PackageReference Include="xunit.assert">
-      <Version>2.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.extensibility.core">
-      <Version>2.4.1</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Libranian.ico" />
@@ -946,7 +942,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
